--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,46 +1,45 @@
+body{
+    border: #9fbb4b solid 4px;
+   
+}
+
+
 .gImage{
-width: 250px;
-height: 250px;
+width: 200px;
+height: 200px;
+border: #799b10 solid  4px;
+}
+.homepg{
+display: inline-flex;
+padding: 20px;
 
-}
-.searchButton{
-background-color: #8FBC94 ;
-height:30px;
-color: white;
-}
-.searchbarFlex{
-display: flex ;
 justify-content: center;
-padding-bottom: 100px;
-}
-
-.searchBar{
-    width: 380px;
-    height: 20px;
-    background-color: #8FBC94;
-    border: #6EB49D;
-    color: white;
-    font-size: 20px;
-    font-family: 'Patrick Hand', cursive;
+background-color: #4b967d;
 
 }
 
-.showpg{
-display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
+
+.child{
   
+    border:black solid 1px;
+   
     
-
     
 }
+
 
 .eachMov{
     border: double 15px #8FBC94;
+    box-shadow: inset 0px 0px 40px 40px #9fbb4b;
     background-color: #6EB49D;
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 15px;
+    display:grid;
+    align-content: center;
+    font-size: 12px;
     font-family: 'Patrick Hand', cursive;
-    padding: 10px; 
-    grid-gap: 5px;
+    height: 300px;
+    padding:5px
+   
+   
 }
